@@ -3,6 +3,7 @@ icon_DATA =					\
 	xchat-gnome-message-data.png		\
 	xchat-gnome-message-new.png		\
 	xchat-gnome-message-nickname-said.png	\
+	xchat-gnome-search-wrapped.png		\
 	xchat-gnome-status-halfop.png		\
 	xchat-gnome-status-operator.png
 
